--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE HTML>
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css" />
+	</head>
 	<body>
-		<h1>Test</h1>
-		<p>Test</p>
+		<ul>
+			<li><a href="#">Philosophy</a></li>
+			<li><a href="#">Chapters</a>
+				<ul>
+					<li><a href="#">LMU</a></li>
+					<li><a href="#">SDSU</a></li>
+					<li><a href="#">USC</a></li>
+				</ul>
+			</li>
+			<li><a href="#">News</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
 	</body>
 </html>
