--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel = "stylesheet" type="text/css" href="css/smoothDivScroll.css" />
+		<style type="text/css">
+			#makeMeScrollable
+		{
+			width:100%;
+			height: 330px;
+			position: relative;
+		}
+		
+		#makeMeScrollable div.scrollableArea img
+		{
+			position: relative;
+			float: left;
+			margin: 0;
+			padding: 0;
+			-webkit-user-select: none;
+			-khtml-user-select: none;
+			-moz-user-select: none;
+			-o-user-select: none;
+			user-select: none;
+		}
+	</style>
 	</head>
 	<body>
 		<ul>
@@ -16,5 +38,30 @@
 			<li><a href="#">News</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
-	</body>
+		<br><br><br><br><br>
+		<div id="makeMeScrollable">
+			<img src="images/demo/field.jpg" alt="Field" id="field" />
+			<img src="images/demo/gnome.jpg" alt="Gnome" id="gnome" />
+			<img src="images/demo/pencils.jpg" alt="Pencils" id="pencils" />
+			<img src="images/demo/golf.jpg" alt="Golf" id="golf" />
+			<img src="images/demo/river.jpg" alt="River" id="river" />
+			<img src="images/demo/train.jpg" alt="Train" id="train" />
+			<img src="images/demo/leaf.jpg" alt="Leaf" id="leaf" />
+			<img src="images/demo/dog.jpg" alt="Dog" id="dog" />
+		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+		<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
+		<script src="js/jquery.mousewheel.min.js" type="text/javascript"></script>
+		<script src="js/jquery.kinetic.min.js" type="text/javascript"></script>
+		<script src="js/jquery.smoothdivscroll-1.3-min.js" type="text/javascript"></script>
+		<script type="text/javascript">
+			$(document).ready(function () {
+				$("#makeMeScrollable").smoothDivScroll({
+					mousewheelScrolling: "allDirections",
+					manualContinuousScrolling: true,
+					autoScrollingMode: "onStart"
+				});
+			});
+		</script>
+		</body>
 </html>
