--- a/index.html
+++ b/index.html
@@ -3,29 +3,32 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel = "stylesheet" type="text/css" href="css/smoothDivScroll.css" />
+		<!--CSS for smoothDivScroll-->
 		<style type="text/css">
-			#makeMeScrollable
-		{
-			width:100%;
-			height: 330px;
-			position: relative;
-		}
-		
-		#makeMeScrollable div.scrollableArea img
-		{
-			position: relative;
-			float: left;
-			margin: 0;
-			padding: 0;
-			-webkit-user-select: none;
-			-khtml-user-select: none;
-			-moz-user-select: none;
-			-o-user-select: none;
-			user-select: none;
-		}
-	</style>
+				#makeMeScrollable
+			{
+				width:100%;
+				height: 330px;
+				position: relative;
+			}
+			
+			#makeMeScrollable div.scrollableArea img
+			{
+				position: relative;
+				float: left;
+				margin: 0;
+				padding: 0;
+				-webkit-user-select: none;
+				-khtml-user-select: none;
+				-moz-user-select: none;
+				-o-user-select: none;
+				user-select: none;
+			}
+		</style>
 	</head>
+	
 	<body>
+		<!--Drop down menu items-->
 		<ul>
 			<li><a href="#">Philosophy</a></li>
 			<li><a href="#">Chapters</a>
@@ -38,7 +41,10 @@
 			<li><a href="#">News</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
+		
 		<br><br><br><br><br>
+		
+		<!--Where to place images in slideshow-->
 		<div id="makeMeScrollable">
 			<img src="images/demo/field.jpg" alt="Field" id="field" />
 			<img src="images/demo/gnome.jpg" alt="Gnome" id="gnome" />
@@ -49,6 +55,8 @@
 			<img src="images/demo/leaf.jpg" alt="Leaf" id="leaf" />
 			<img src="images/demo/dog.jpg" alt="Dog" id="dog" />
 		</div>
+		
+		<!--javascript code given with smoothDivScroll-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 		<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
 		<script src="js/jquery.mousewheel.min.js" type="text/javascript"></script>
@@ -63,5 +71,6 @@
 				});
 			});
 		</script>
+		
 		</body>
 </html>
