--- a/index.html
+++ b/index.html
@@ -72,5 +72,27 @@
 			});
 		</script>
 		
+		<h1>Mission Statement</h1>
+		<table align="center">
+			<tr>
+				<p>The mission of 3D4E is two-fold:</p>
+			</tr>
+			<tr>
+				<p>- 3D4E works to dynamically contribute to the development of the consumer-friendly three-dimensional printing industry</p>
+			</tr>
+			<tr>
+				<p>- 3D4E, in its exploration of the disruptive innovation works to represent an ever-evolving, interrelated, and adaptive organization. As such, 3D4E aims to foster its own goals and pursuits while actively working with and learning from the student organizations in its community</p>
+			</tr>
+		</table>
 		</body>
 </html>
+
+<!--
+<p>The mission of 3D4E is two-fold:</p>
+		<p>- 3D4E works to dynamically contribute to the development of the consumer-friendly
+		   three-dimensional printing industry</p>
+		<p>- 3D4E, in its exploration of the disruptive innovation works to represent an
+		   ever-evolving, interrelated, and adaptive organization. As such, 3D4E aims to
+		   foster its own goals and pursuits while actively working with and learning from
+		   the student organizations in its community</p>
+-->
