--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
 	<body>
 		<!--Drop down menu items-->
 		<ul>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="#">Philosophy</a></li>
 			<li><a href="#">Chapters</a>
 				<ul>
-					<li><a href="#">LMU</a></li>
-					<li><a href="#">SDSU</a></li>
-					<li><a href="#">USC</a></li>
+					<li><a href="http://3d4elmu.wordpress.com/">LMU</a></li>
+					<li><a href="http://3d4esdsu.wordpress.com/">SDSU</a></li>
+					<li><a href="http://3d4eusc.wordpress.com/">USC</a></li>
 				</ul>
 			</li>
 			<li><a href="#">News</a></li>
@@ -72,27 +73,24 @@
 			});
 		</script>
 		
+		<!--Table that makes the Mission Statement-->
 		<h1>Mission Statement</h1>
-		<table align="center">
+		<table>
 			<tr>
-				<p>The mission of 3D4E is two-fold:</p>
+				<td><b>The mission of 3D4E is two-fold:</b></td>
 			</tr>
 			<tr>
-				<p>- 3D4E works to dynamically contribute to the development of the consumer-friendly three-dimensional printing industry</p>
+				<td style="text-align: justify;">- 3D4E works to dynamically contribute to the development of the consumer-friendly three-dimensional printing industry</td
 			</tr>
 			<tr>
-				<p>- 3D4E, in its exploration of the disruptive innovation works to represent an ever-evolving, interrelated, and adaptive organization. As such, 3D4E aims to foster its own goals and pursuits while actively working with and learning from the student organizations in its community</p>
+				<td style="text-align: justify;">- 3D4E, in its exploration of the disruptive innovation works to represent an ever-evolving, interrelated, and adaptive organization. As such, 3D4E aims to foster its own goals and pursuits while actively working with and learning from the student organizations in its community</td>
 			</tr>
 		</table>
-		</body>
+		
+		<!--Social media link-->
+		<br><br><br><br>
+		<img src="images/facebook_icon.png" alt="Like us on Facebook!">
+		<img src="images/twitter_icon.png" alt="Follow us on Twitter!">
+		
+	</body>
 </html>
-
-<!--
-<p>The mission of 3D4E is two-fold:</p>
-		<p>- 3D4E works to dynamically contribute to the development of the consumer-friendly
-		   three-dimensional printing industry</p>
-		<p>- 3D4E, in its exploration of the disruptive innovation works to represent an
-		   ever-evolving, interrelated, and adaptive organization. As such, 3D4E aims to
-		   foster its own goals and pursuits while actively working with and learning from
-		   the student organizations in its community</p>
--->
