--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</tr>
 		</table>
 		
-		<!--Social media link-->
+		<!--Social media links-->
 		<br><br><br><hr><br>
 		<img src="images/facebook_icon.png" alt="Like us on Facebook!">
 		<img src="images/twitter_icon.png" alt="Follow us on Twitter!">
