--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 			<li><a href="#">Philosophy</a></li>
 			<li><a href="#">Chapters</a>
 				<ul>
-					<li><a href="http://3d4elmu.wordpress.com/">LMU</a></li>
-					<li><a href="http://3d4esdsu.wordpress.com/">SDSU</a></li>
-					<li><a href="http://3d4eusc.wordpress.com/">USC</a></li>
+					<li><a href="LMU.html">LMU</a></li>
+					<li><a href="SDSU.html">SDSU</a></li>
+					<li><a href="USC.html">USC</a></li>
 				</ul>
 			</li>
 			<li><a href="#">News</a></li>
