--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<!--smoothDivScroll CSS-->
 		<link rel = "stylesheet" type="text/css" href="css/smoothDivScroll.css" />
-		<!--CSS for smoothDivScroll-->
 		<style type="text/css">
 				#makeMeScrollable
 			{
@@ -30,17 +30,17 @@
 	<body>
 		<!--Drop down menu items-->
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Philosophy</a></li>
-			<li><a href="#">Chapters</a>
+			<a href="index.html"><li>Home</li></a>
+			<a href="#"><li>Philosophy</li></a>
+			<li>Chapters
 				<ul>
-					<li><a href="LMU.html">LMU</a></li>
-					<li><a href="SDSU.html">SDSU</a></li>
-					<li><a href="USC.html">USC</a></li>
+					<a href="LMU.html"><li>LMU</li></a>
+					<a href="SDSU.html"><li>SDSU</li></a>
+					<a href="USC.html"><li>USC</li></a>
 				</ul>
 			</li>
-			<li><a href="#">News</a></li>
-			<li><a href="#">Contact</a></li>
+			<a href="#"><li>News</li></a>
+			<a href="#"><li>Contact</li></a>
 		</ul>
 		
 		<br><br><br><br><br>
@@ -89,8 +89,9 @@
 		
 		<!--Social media links-->
 		<br><br><br><hr><br>
-		<img src="images/facebook_icon.png" alt="Like us on Facebook!">
-		<img src="images/twitter_icon.png" alt="Follow us on Twitter!">
+		<img src="images/facebook.png" alt="Like us on Facebook!">
+		<img src="images/twitter.png" alt="Follow us on Twitter!">
+		<img src="images/instagram.png" alt="Follow us on Instagram!">
 		
 	</body>
 </html>
