--- a/USC.html
+++ b/USC.html
@@ -5,25 +5,25 @@
 	
 	<body>
 		<!--Drop down menu items-->
-		<ul>
-			<a href="index.html"><li>Home</li></a>
-			<a href="#"><li>Philosophy</li></a>
-			<li>Chapters
+		<div id="ChapterHeader">
+			<h2>University of Southern California</h2>
+			<ul>
+			<a href="index.html"><li>Club Home</li></a>
+			<a href="#"><li>Designs</li></a>
+			<a href="http://3d4elmu.wordpress.com"><li>News/Blog</li></a>
+			<a href="#"><li>About Us</li></a>
+			<li>Other Chapters
 				<ul>
 					<a href="LMU.html"><li>LMU</li></a>
 					<a href="SDSU.html"><li>SDSU</li></a>
-					<a href="USC.html"><li>USC</li></a>
 				</ul>
 			</li>
-			<a href="#"><li>News</li></a>
-			<a href="#"><li>Contact</li></a>
 		</ul>
-		
-		<div id="ChapterHeader">
-			<h2>University of Southern California</h2>
 		</div>
+		<hr>
+		
 		<div id="ChapterMain">
-			<p>placeholder text</p>
+			<h3><u>Pictures</u></h3>
 		</div>
 		<div id="ChapterBlogFeed">
 			<h3><u>Recent Blog Posts</u></h3>
