LMU Chapter (About Us)
Started work on the About Us page (added leader portraits in
alphabetical order, added place for 'passions'

--- a/LMUaboutus.html
+++ b/LMUaboutus.html
@@ -23,7 +23,36 @@
 		</div>
 		<hr>		
 		<div id="ChapterMain">
-			<h3><u>Pictures</u></h3>
+			<h3><u>Leaders</u></h3>
+			<table border="0" width="500">
+				<tr>
+					<td>
+						<p align="center">Adrian, Michael</p>
+						<div align="center"><img src="images/LMU_Leaders/MichaelAdrian.jpg" alt="Michael Adrian" style="border: 1px solid #0000ff; border-radius: 180px;" height="175"/></div>
+						<p align="center"><font size="1">&#8226;Passion 1<br>
+														 &#8226;Passion 2<br>
+														 &#8226;Passion 3</font></p>
+						<hr>
+					</td>
+					<td>
+						<p align="center">Benattou, Bryan</p>
+						<div align="center"><img src="images/LMU_Leaders/BryanBenattou.jpg" alt="Bryan Benattou" style="border: 1px solid #0000ff; border-radius: 180px;" height="175"/></div>
+						<p align="center"><font size="1">&#8226;Passion 1<br>
+														 &#8226;Passion 2<br>
+														 &#8226;Passion 3</font></p>
+						<hr>
+					</td>
+					<td>
+						<p align="center">Modiste, Evan</p>
+						<div align="center"><img src="images/LMU_Leaders/EvanModiste.jpg" alt="Evan Modiste"style="border: 1px solid #0000ff; border-radius: 180px;" height="175"/></div>
+						<p align="center"><font size="1">&#8226;Passion 1<br>
+														 &#8226;Passion 2<br>
+														 &#8226;Passion 3</font></p>
+						<hr>
+					</td>
+				</tr>
+			</table>
+			<br>
 		</div>
 		<div id="ChapterBlogFeed">
 			<h3><u>Recent Blog Posts</u></h3>
@@ -33,11 +62,7 @@
 		</div>
 		<div id="ChapterFooter">
 			<!--Social media link-->
-			<br><br><br><br>
-			<!--TEMPORARY BREAKS-->
-			<br><br><br><br><br>
-			<!-------------------->
-			<hr>
+			<br><br><br><hr><br>
 			<img src="images/facebook.png" alt="Like us on Facebook!">
 			<img src="images/twitter.png" alt="Follow us on Twitter!">
 			<img src="images/instagram.png" alt="Follow us on Instagram!">
