--- a/USC.html
+++ b/USC.html
@@ -8,10 +8,11 @@
 		<div id="ChapterHeader">
 			<h2>University of Southern California</h2>
 			<ul>
-			<a href="index.html"><li>Club Home</li></a>
-			<a href="#"><li>Designs</li></a>
-			<a href="http://3d4elmu.wordpress.com"><li>News/Blog</li></a>
-			<a href="#"><li>About Us</li></a>
+				<a href="index.html"><li>Club Home</li></a>
+				<a href="USC.html"><li>Chapter Home</li></a>
+				<a href="#"><li>Designs</li></a>
+				<a href="http://3d4elmu.wordpress.com"><li>News/Blog</li></a>
+				<a href="#"><li>About Us</li></a>
 			<li>Other Chapters
 				<ul>
 					<a href="LMU.html"><li>LMU</li></a>
@@ -33,7 +34,11 @@
 		</div>
 		<div id="ChapterFooter">
 			<!--Social media link-->
-			<br><br><br><hr><br>
+			<br><br><br><br>
+			<!--TEMPORARY BREAKS-->
+			<br><br><br><br><br>
+			<!-------------------->
+			<hr>
 			<img src="images/facebook.png" alt="Like us on Facebook!">
 			<img src="images/twitter.png" alt="Follow us on Twitter!">
 			<img src="images/instagram.png" alt="Follow us on Instagram!">
