--- a/LMUaboutus.html
+++ b/LMUaboutus.html
@@ -23,7 +23,7 @@
 		</div>
 		<hr>		
 		<div id="ChapterMain">
-			<h3><u>Leaders</u></h3>
+			<h3><u>Leadership Team</u></h3>
 			<table border="0" width="500">
 				<tr>
 					<td>
