--- a/LMU.html
+++ b/LMU.html
@@ -23,7 +23,7 @@
 		</div>
 		<hr>		
 		<div id="ChapterMain">
-			<h3><u>Pictures</u></h3>
+			<br><p><i>Under Construction</i></p><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		</div>
 		<div id="ChapterBlogFeed">
 			<h3><u>Recent Blog Posts</u></h3>
@@ -32,11 +32,33 @@
 			<script type="text/javascript" src="http://output17.rssinclude.com/output?type=js&amp;id=829791&amp;hash=a585a2729d27b8a8a2ea875db1f36353"></script>	
 		</div>
 		<div id="ChapterFooter">
+			<h3><u>Leadership Team</u></h3>
+			<table border="0" width="500">
+				<tr>
+					<td>
+						<p align="center">Adrian, Michael</p>
+						<div align="center"><img src="images/LMU_Leaders/MichaelAdrian.jpg" alt="Michael Adrian" style="border: 1px solid #0000ff; border-radius: 180px;" height="100"/></div>
+						<p align="center"><font size="1">&#8226;Passion 1<br>
+														 &#8226;Passion 2<br>
+														 &#8226;Passion 3</font></p>
+					</td>
+					<td>
+						<p align="center">Benattou, Bryan</p>
+						<div align="center"><img src="images/LMU_Leaders/BryanBenattou.jpg" alt="Bryan Benattou" style="border: 1px solid #0000ff; border-radius: 180px;" height="100"/></div>
+						<p align="center"><font size="1">&#8226;Passion 1<br>
+														 &#8226;Passion 2<br>
+														 &#8226;Passion 3</font></p>
+					</td>
+					<td>
+						<p align="center">Modiste, Evan</p>
+						<div align="center"><img src="images/LMU_Leaders/EvanModiste.jpg" alt="Evan Modiste"style="border: 1px solid #0000ff; border-radius: 180px;" height="100"/></div>
+						<p align="center"><font size="1">&#8226;Passion 1<br>
+														 &#8226;Passion 2<br>
+														 &#8226;Passion 3</font></p>
+					</td>
+				</tr>
+			</table>
 			<!--Social media link-->
-			<br><br><br><br>
-			<!--TEMPORARY BREAKS-->
-			<br><br><br><br><br>
-			<!-------------------->
 			<hr>
 			<img src="images/facebook.png" alt="Like us on Facebook!">
 			<img src="images/twitter.png" alt="Follow us on Twitter!">
