--- a/LMUaboutus.html
+++ b/LMUaboutus.html
@@ -23,33 +23,7 @@
 		</div>
 		<hr>		
 		<div id="ChapterMain">
-			<h3><u>Leadership Team</u></h3>
-			<table border="0" width="500">
-				<tr>
-					<td>
-						<p align="center">Adrian, Michael</p>
-						<div align="center"><img src="images/LMU_Leaders/MichaelAdrian.jpg" alt="Michael Adrian" style="border: 1px solid #0000ff; border-radius: 180px;" height="175"/></div>
-						<p align="center"><font size="1">&#8226;Passion 1<br>
-														 &#8226;Passion 2<br>
-														 &#8226;Passion 3</font></p>
-					</td>
-					<td>
-						<p align="center">Benattou, Bryan</p>
-						<div align="center"><img src="images/LMU_Leaders/BryanBenattou.jpg" alt="Bryan Benattou" style="border: 1px solid #0000ff; border-radius: 180px;" height="175"/></div>
-						<p align="center"><font size="1">&#8226;Passion 1<br>
-														 &#8226;Passion 2<br>
-														 &#8226;Passion 3</font></p>
-					</td>
-					<td>
-						<p align="center">Modiste, Evan</p>
-						<div align="center"><img src="images/LMU_Leaders/EvanModiste.jpg" alt="Evan Modiste"style="border: 1px solid #0000ff; border-radius: 180px;" height="175"/></div>
-						<p align="center"><font size="1">&#8226;Passion 1<br>
-														 &#8226;Passion 2<br>
-														 &#8226;Passion 3</font></p>
-					</td>
-				</tr>
-			</table>
-			<br>
+			<br><p><i>Under Construction</i></p><br><br><br><br>
 		</div>
 		<div id="ChapterBlogFeed">
 			<h3><u>Recent Blog Posts</u></h3>
