--- a/LMU.html
+++ b/LMU.html
@@ -37,24 +37,31 @@
 				<tr>
 					<td>
 						<p align="center">Adrian, Michael</p>
-						<div align="center"><img src="images/LMU_Leaders/MichaelAdrian.jpg" alt="Michael Adrian" style="border: 1px solid #0000ff; border-radius: 180px;" height="100"/></div>
+						<div align="center"><img src="images/LMU_Leaders/MichaelAdrian.jpg" alt="Michael Adrian" style="border: 1px solid #0000ff; border-radius: 180px;" height="100" /></div>
 						<p align="center"><font size="1">&#8226;Passion 1<br>
 														 &#8226;Passion 2<br>
 														 &#8226;Passion 3</font></p>
 					</td>
 					<td>
 						<p align="center">Benattou, Bryan</p>
-						<div align="center"><img src="images/LMU_Leaders/BryanBenattou.jpg" alt="Bryan Benattou" style="border: 1px solid #0000ff; border-radius: 180px;" height="100"/></div>
-						<p align="center"><font size="1">&#8226;Passion 1<br>
-														 &#8226;Passion 2<br>
-														 &#8226;Passion 3</font></p>
+						<div align="center"><img src="images/LMU_Leaders/BryanBenattou.jpg" alt="Bryan Benattou" style="border: 1px solid #0000ff; border-radius: 180px;" height="100" /></div>
+						<p align="center"><font size="1">&#8226;Surfing<br>
+														 &#8226;Minimalism<br>
+														 &#8226;Learning</font></p>
 					</td>
 					<td>
 						<p align="center">Modiste, Evan</p>
-						<div align="center"><img src="images/LMU_Leaders/EvanModiste.jpg" alt="Evan Modiste"style="border: 1px solid #0000ff; border-radius: 180px;" height="100"/></div>
-						<p align="center"><font size="1">&#8226;Passion 1<br>
-														 &#8226;Passion 2<br>
-														 &#8226;Passion 3</font></p>
+						<div align="center"><img src="images/LMU_Leaders/EvanModiste.jpg" alt="Evan Modiste" style="border: 1px solid #0000ff; border-radius: 180px;" height="100" /></div>
+						<p align="center"><font size="1">&#8226;Culture<br>
+														 &#8226;Equilibrium<br>
+														 &#8226;Experience</font></p>
+					</td>
+					<td>
+						<p align="center">Rice, Jonathan</p>
+						<div align="center"><img src="images/LMU_Leaders/JonRice.jpg" alt="Jonathan Rice" style="border: 1px solid #0000ff; border-radius: 180px;" height="100" /></div>
+						<p align="center"><font size="1">&#8226;Sailing<br>
+														 &#8226;Teaching<br>
+														 &#8226;Learning</font></p>
 					</td>
 				</tr>
 			</table>
