--- a/LMU.html
+++ b/LMU.html
@@ -34,30 +34,30 @@
 		<div id="ChapterFooter">
 			<h3><u>Leadership Team</u></h3>
 			<table border="0" width="500">
-				<tr>
+				<tr width="500">
 					<td>
-						<p align="center">Adrian, Michael</p>
+						<p align="center"><font size="2">Adrian, Michael</font></p>
 						<div align="center"><img src="images/LMU_Leaders/MichaelAdrian.jpg" alt="Michael Adrian" style="border: 1px solid #0000ff; border-radius: 180px;" height="100" /></div>
 						<p align="center"><font size="1">&#8226;Passion 1<br>
 														 &#8226;Passion 2<br>
 														 &#8226;Passion 3</font></p>
 					</td>
 					<td>
-						<p align="center">Benattou, Bryan</p>
+						<p align="center"><font size="2">Benattou, Bryan</font></p>
 						<div align="center"><img src="images/LMU_Leaders/BryanBenattou.jpg" alt="Bryan Benattou" style="border: 1px solid #0000ff; border-radius: 180px;" height="100" /></div>
 						<p align="center"><font size="1">&#8226;Surfing<br>
 														 &#8226;Minimalism<br>
 														 &#8226;Learning</font></p>
 					</td>
 					<td>
-						<p align="center">Modiste, Evan</p>
+						<p align="center"><font size="2">Modiste, Evan</font></p>
 						<div align="center"><img src="images/LMU_Leaders/EvanModiste.jpg" alt="Evan Modiste" style="border: 1px solid #0000ff; border-radius: 180px;" height="100" /></div>
 						<p align="center"><font size="1">&#8226;Culture<br>
 														 &#8226;Equilibrium<br>
 														 &#8226;Experience</font></p>
 					</td>
 					<td>
-						<p align="center">Rice, Jonathan</p>
+						<p align="center"><font size="2">Rice, Jonathan</font></p>
 						<div align="center"><img src="images/LMU_Leaders/JonRice.jpg" alt="Jonathan Rice" style="border: 1px solid #0000ff; border-radius: 180px;" height="100" /></div>
 						<p align="center"><font size="1">&#8226;Sailing<br>
 														 &#8226;Teaching<br>
