--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				</ul>
 			</li>
 			<a href="#"><li>News</li></a>
-			<a href="#"><li>Contact</li></a>
+			<a href="contact.html"><li>Contact</li></a>
 		</ul>
 		<hr>
 				
