--- a/SDSU.html
+++ b/SDSU.html
@@ -3,6 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
 	
+	<div id="background">
 	<body>
 		<!--Drop down menu items-->
 		<div id="ChapterHeader">
@@ -44,5 +45,6 @@
 			<img src="images/instagram.png" alt="Follow us on Instagram!">
 		</div>
 		
+	</div>	
 	</body>
 </html>
