--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css" /></head>
 	
+	<div id="background">
 	<body>
 		<!--Drop down menu items-->
 		<ul>
@@ -32,7 +33,6 @@
 			<input type="submit" value="Send">
 			<input type="reset" value="Reset">
 		</form>
-		<hr>
 		<!--Social media links-->
 		<br><br><br><hr><br>
 		<img src="images/facebook.png" alt="Like us on Facebook!">
@@ -40,4 +40,5 @@
 		<img src="images/instagram.png" alt="Follow us on Instagram!">
 		
 	</body>
+	</div>
 </html>
