--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		</style>
 	</head>
 	
+	<div id="background">
 	<body>
 		<!--Drop down menu items-->
 		<ul>
@@ -46,14 +47,12 @@
 				
 		<!--Where to place images in slideshow-->
 		<div id="makeMeScrollable">
-			<img src="images/demo/field.jpg" alt="Field" id="field" />
-			<img src="images/demo/gnome.jpg" alt="Gnome" id="gnome" />
-			<img src="images/demo/pencils.jpg" alt="Pencils" id="pencils" />
-			<img src="images/demo/golf.jpg" alt="Golf" id="golf" />
-			<img src="images/demo/river.jpg" alt="River" id="river" />
-			<img src="images/demo/train.jpg" alt="Train" id="train" />
-			<img src="images/demo/leaf.jpg" alt="Leaf" id="leaf" />
-			<img src="images/demo/dog.jpg" alt="Dog" id="dog" />
+			<img src="images/3dprintingpressconference/one.jpg" height="400px" />
+			<img src="images/3dprintingpressconference/two.jpg" height="400px" />
+			<img src="images/3dprintingpressconference/three.jpg" height="400px" />
+			<img src="images/3dprintingpressconference/four.jpg" height="400px" />
+			<img src="images/3dprintingpressconference/five.jpg" height="400px" />
+			<img src="images/3dprintingpressconference/six.jpg" height="400px" />
 		</div>
 		
 		<!--javascript code given with smoothDivScroll-->
@@ -71,18 +70,20 @@
 				});
 			});
 		</script>
-		
+		<br>
 		<!--Table that makes the Mission Statement-->
-		<h1>Mission Statement</h1>
+		<h1 style="display:inline;">Mission Statement</h1>
 		<table>
 			<tr>
-				<td><b>The mission of 3D4E is two-fold:</b></td>
-			</tr>
-			<tr>
-				<td style="text-align: justify;">- 3D4E works to dynamically contribute to the development of the consumer-friendly three-dimensional printing industry</td
-			</tr>
-			<tr>
-				<td style="text-align: justify;">- 3D4E, in its exploration of the disruptive innovation works to represent an ever-evolving, interrelated, and adaptive organization. As such, 3D4E aims to foster its own goals and pursuits while actively working with and learning from the student organizations in its community</td>
+				<td style="text-align: justify;"> &nbsp;&nbsp;&nbsp;&nbsp;At the heart of us, we are uniquely qualified to do something more because we are and we 
+												  choose to be. The notion of the header above reflects exactly this. Each of us here brings to the 
+												  table something that another can have complimented. Here, the mind of the engineer and the 
+												  mind of the accountant are no different. However, the perspectives and the lens through which 
+												  we endeavor are different. The economist and the trainer are more similar and more eclectic 
+												  than we might originally recognize. This is appreciated and misunderstood. Only through time, 
+												  patience, and virtue do we converge onto a unified sense of vision, maximizing the potential 
+												  within ourselves and our comrades next to us.
+				</td>
 			</tr>
 		</table>
 		
@@ -93,4 +94,5 @@
 		<img src="images/instagram.png" alt="Follow us on Instagram!">
 		
 	</body>
+	</div>
 </html>
