--- a/USC.html
+++ b/USC.html
@@ -3,6 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
 	
+	<div id="background">
 	<body>
 		<!--Drop down menu items-->
 		<div id="ChapterHeader">
@@ -45,4 +46,5 @@
 		</div>
 		
 	</body>
+	</div>
 </html>
